--- a/fevermap-front/package.json
+++ b/fevermap-front/package.json
@@ -25,7 +25,14 @@
     "polymer-webpack-loader": "^2.0.3",
     "postcss-cli": "^6.1.3",
     "resolve-url-loader": "^3.1.1",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "workbox-cacheable-response": "^5.0.0",
+    "workbox-core": "^5.0.0",
+    "workbox-expiration": "^5.0.0",
+    "workbox-navigation-preload": "^5.0.0",
+    "workbox-precaching": "^5.0.0",
+    "workbox-routing": "^5.0.0",
+    "workbox-strategies": "^5.0.0"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.3.0",
@@ -50,6 +57,7 @@
     "web-components-loader": "^0.1.2",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.8.1"
+    "webpack-dev-server": "^3.8.1",
+    "workbox-webpack-plugin": "^5.0.0"
   }
 }
