Gitlab-CI: Refactor to need SSH key only in deploy stages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,23 +14,19 @@ stages:
   - test
   - deploy
 
-before_script:
-  - apt-get update -qq
-  - apt-get install -qq git
-  # Setup SSH deploy keys
-  - 'which ssh-agent || ( apt-get install -qq openssh-client )'
-  - eval $(ssh-agent -s)
-  - ssh-add <(echo "$FEVERMAP_APP_USER_SSH_PRIVATE_KEY")
-
 test:
   stage: test
   script:
+    - apt-get update -qq && apt-get install -qq --no-install-recommends flake8 shellcheck
     - make test
 
 staging:
   stage: deploy
   script:
-    - echo "Not implemented"
+    - 'which ssh-agent || ( apt-get update -qq && apt-get install -qq openssh-client )'
+    - eval $(ssh-agent -s)
+    - ssh-add <(echo "$FEVERMAP_APP_USER_SSH_PRIVATE_KEY")
+    # Deploy
     - ssh fevermap@dev.fevermap.net -p 33100 -o StrictHostKeyChecking=no "cd /var/www/fevermap && make update-master && make run"
   only:
     - master
