Update and extend documentation for new participants
- Use "Fevermap" in a unified way everywhere. This was voted as the best
  variant of the name on hackathon Slack today.
- Explain front-end and back-end, their difference and what skills are
  needed to contribute to them.
- Extend the main README with easy steps how to participate.

--- a/app/src/assets/images/manifest.json
+++ b/app/src/assets/images/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Fever Map",
-  "short_name": "Fever Map",
+  "name": "Fevermap",
+  "short_name": "Fevermap",
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "standalone",
