--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,13 +28,17 @@ staging:
     - ssh-add <(echo "$FEVERMAP_APP_USER_SSH_PRIVATE_KEY")
     # Deploy
     - ssh fevermap@dev.fevermap.net -p 33100 -o StrictHostKeyChecking=no "cd /var/www/fevermap && make update-master && make run"
-  only:
-    - master
+  rules:
+    - if: $CI_MERGE_REQUEST_ID
+      when: never
+    - if: $CI_COMMIT_BRANCH == "master"
 
 # Production server does not yet exist, this is a placeholder only
 production:
   stage: deploy
   script:
     - echo "Not implemented"
-  only:
-    - tags
+  rules:
+    - if: $CI_MERGE_REQUEST_ID
+      when: never
+    - if: $CI_COMMIT_TAG
