--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ staging:
   rules:
     - if: $CI_MERGE_REQUEST_ID
       when: never
-    - if: $CI_COMMIT_BRANCH == "master"
+    - if: $CI_COMMIT_BRANCH == "master" # && @TODO: If not in our repo, then never
 
 # Production server does not yet exist, this is a placeholder only
 production:
