Bugfix: Never run deploy stage on master branch in forks
The original fix 8959104731654dc239b3b0a52919363fa2f5ebff was incomplete.
This adds more variables to ensure that the deploy pipeline is run only
on in the Fevermap project and it's master branch, not in any fork
at any time.

Predefined variables reference:
https://docs.gitlab.com/ee/ci/variables/predefined_variables.html

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,9 +29,8 @@ staging:
     # Deploy
     - ssh fevermap@dev.fevermap.net -p 33100 -o StrictHostKeyChecking=no "cd /var/www/fevermap && make update-master && make run"
   rules:
-    - if: $CI_MERGE_REQUEST_ID
-      when: never
-    - if: $CI_COMMIT_BRANCH == "master" # && @TODO: If not in our repo, then never
+    # Only run deply on Fevermap master branch when a release is tagged
+    - if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master"
 
 # Production server does not yet exist, this is a placeholder only
 production:
@@ -39,6 +38,5 @@ production:
   script:
     - echo "Not implemented"
   rules:
-    - if: $CI_MERGE_REQUEST_ID
-      when: never
-    - if: $CI_COMMIT_TAG
+    # Only run deply on Fevermap master branch when a release is tagged
+    - if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master" && $CI_COMMIT_TAG
