--- a/app/package.json
+++ b/app/package.json
@@ -58,6 +58,7 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.8.1",
-    "workbox-webpack-plugin": "^5.0.0"
+    "workbox-webpack-plugin": "^5.0.0",
+    "workbox-window": "^5.1.1"
   }
 }
