--- a/app/src/manifest.json
+++ b/app/src/manifest.json
@@ -9,27 +9,27 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "icon-64x64.png",
+      "src": "app-icon-64x64.png",
       "sizes": "64x64",
       "type": "image/png"
     },
     {
-      "src": "icon-96x96.png",
+      "src": "app-icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "icon-128x128.png",
+      "src": "app-icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "icon-192x192.png",
+      "src": "app-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "app-icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
