--- a/ocp/dc-fevermap-db.yaml
+++ b/ocp/dc-fevermap-db.yaml
@@ -78,7 +78,7 @@ spec:
           timeoutSeconds: 1
         resources:
           limits:
-            memory: 512Mi
+            memory: 2Gi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
@@ -89,8 +89,9 @@ spec:
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       volumes:
-      - emptyDir: {}
-        name: feverdb-data
+      - name: feverdb-data
+        persistentVolumeClaim:
+          claimName: mariadb-storage
   test: false
   triggers:
   - imageChangeParams:
