--- a/ocp/dc-fevermap-api.yaml
+++ b/ocp/dc-fevermap-api.yaml
@@ -3,8 +3,6 @@ kind: DeploymentConfig
 metadata:
   annotations:
     app.openshift.io/connects-to: fevermap-db
-  creationTimestamp: null
-  generation: 1
   labels:
     app: fevermap-api
     app.kubernetes.io/component: fevermap-api
@@ -12,7 +10,7 @@ metadata:
     app.kubernetes.io/part-of: fevermap
   name: fevermap-api
 spec:
-  replicas: 1
+  replicas: 2
   revisionHistoryLimit: 5
   selector:
     app: fevermap-api
@@ -28,35 +26,45 @@ spec:
     type: Rolling
   template:
     metadata:
+      creationTimestamp: null
       labels:
         app: fevermap-api
         deploymentconfig: fevermap-api
     spec:
       containers:
-      - env:
-        - name: FEVERMAP_API_DATABASE_URI
-          value: mysql://fevermap:feverpass@fevermap-db/fevermap?charset=utf8mb4
-        - name: FLASK_ENV
-          value: kube
-        imagePullPolicy: IfNotPresent
-        name: fevermap-api
-        ports:
-        - containerPort: 8080
-          protocol: TCP
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
+        - env:
+            - name: FEVERMAP_API_DATABASE_URI
+              value: 'mysql://fevermap:feverpass@fevermap-db/fevermap?charset=utf8mb4'
+            - name: FLASK_ENV
+              value: kube
+            - name: APP_SCRIPT
+              value: entrypoint.sh
+            - name: APPDIR
+              value: /opt/app-root/src
+            - name: UWSGIPLUGINLINE
+          image: fevermap-api:latest
+          imagePullPolicy: IfNotPresent
+          name: fevermap-api
+          ports:
+            - containerPort: 8080
+              protocol: TCP
+          resources:
+            limits:
+              memory: 1Gi
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
   test: false
   triggers:
-  - imageChangeParams:
-      automatic: true
-      containerNames:
-      - fevermap-api
-      from:
-        kind: ImageStreamTag
-        name: fevermap-api:latest
-    type: ImageChange
-  - type: ConfigChange
+    - imageChangeParams:
+        automatic: true
+        containerNames:
+          - fevermap-api
+        from:
+          kind: ImageStreamTag
+          name: 'fevermap-api:latest'
+      type: ImageChange
+    - type: ConfigChange
