--- a/ocp/bc-fevermap-build.yaml
+++ b/ocp/bc-fevermap-build.yaml
@@ -1,39 +1,41 @@
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
-  labels:
-    app: fevermap
   name: fevermap-build
 spec:
   failedBuildsHistoryLimit: 5
   output:
     to:
       kind: ImageStreamTag
-      name: fevermap-build:latest
+      name: 'fevermap-build:latest'
+  resources:
+    limits:
+      memory: 2Gi
   runPolicy: Serial
   source:
     contextDir: app
     git:
-      uri: https://gitlab.com/fevermap/fevermap.git
+      uri: 'https://gitlab.com/fevermap/fevermap.git'
     type: Git
   strategy:
     sourceStrategy:
       env:
-      - name: NPM_BUILD
-        value: webpack --mode production --env.NODE_ENV=production --env.API_URL=https://fevermap.apps.ocp4.ocp.ninja
-      - name: OUTPUT_DIR
-        value: dist
+        - name: NPM_BUILD
+          value: >-
+            webpack --mode production --env.NODE_ENV=production
+        - name: OUTPUT_DIR
+          value: dist
       from:
         kind: ImageStreamTag
-        name: ubi8-s2i-web-app:latest
-        namespace: fevermap
+        name: 'ubi8-s2i-web-app:latest'
     type: Source
   successfulBuildsHistoryLimit: 5
   triggers:
-  - gitlab:
-      secretReference:
-        name: gitlab-pull
-    type: GitLab
-  - type: ConfigChange
-  - imageChange:
-    type: ImageChange
+    - gitlab:
+        secretReference:
+          name: gitlab-webhook
+      type: GitLab
+    - type: ConfigChange
+    - imageChange:
+      type: ImageChange
+
