rename gitlab webhook secret

--- a/ocp/bc-fevermap-api-s2i.yaml
+++ b/ocp/bc-fevermap-api-s2i.yaml
@@ -38,7 +38,7 @@ spec:
   triggers:
     - gitlab:
         secretReference:
-          name: gitlab-pull
+          name: gitlab-webhook
       type: GitLab
     - type: ImageChange
       imageChange:
