--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "workbox-cacheable-response": "^5.0.0",
     "workbox-core": "^5.0.0",
     "workbox-expiration": "^5.0.0",
+    "workbox-google-analytics": "^5.0.0",
     "workbox-navigation-preload": "^5.0.0",
     "workbox-precaching": "^5.0.0",
     "workbox-routing": "^5.0.0",
