--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint:eslint": "eslint --ext .js . --ignore-path .gitignore",
+    "format:eslint": "eslint --ext .js . --fix --ignore-path .gitignore",
+    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
+    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "format": "npm run format:eslint && npm run format:prettier",
+    "check": "npm run format && npm run lint",
     "build": "webpack --mode production --env.NODE_ENV=production --env.API_URL=https://dev.fevermap.net",
     "dev": "webpack --mode development"
   },
@@ -33,7 +40,8 @@
     "workbox-navigation-preload": "^5.0.0",
     "workbox-precaching": "^5.0.0",
     "workbox-routing": "^5.0.0",
-    "workbox-strategies": "^5.0.0"
+    "workbox-strategies": "^5.0.0",
+    "workbox-window": "^5.1.1"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.3.0",
@@ -46,6 +54,9 @@
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^3.4.2",
     "es-dev-server": "^1.18.3",
+    "eslint": "^6.8.0",
+    "@open-wc/eslint-config": "^2.0.0",
+    "@open-wc/prettier-config": "^0.1.10",
     "extract-loader": "^5.0.1",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -59,7 +70,25 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.8.1",
-    "workbox-webpack-plugin": "^5.0.0",
-    "workbox-window": "^5.1.1"
+    "workbox-webpack-plugin": "^5.0.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@open-wc/eslint-config",
+      "eslint-config-prettier"
+    ]
+  },
+  "prettier": "@open-wc/prettier-config",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
