--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ build-app:
     - npm install -g npm@latest
     - cd app
     - npm install
+    - npm run lint
     - npm run build
     - find dist -ls
 
