--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^2.9.3",
     "clean-webpack-plugin": "^3.0.0",
     "dayjs": "^1.8.16",
+    "firebase": "^7.13.1",
     "glob": "^7.1.4",
     "lit-element": "^2.0.1",
     "material-components-web": "^5.1.0",
