Add container support

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@
 FEVERMAP_API_DATABASE_URI="mysql://fevermap:feverpass@database/fevermap?charset=utf8mb4"
 APP_URL="https://dev.fevermap.net"
 API_URL="https://dev.fevermap.net/api"
+PUSH_API_URL="https://dev.fevermap.net/push-api"
