--- a/push-api/package.json
+++ b/push-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "nodemon push-service.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "dayjs": "^1.8.23",
     "express": "^4.17.1",
     "firebase-admin": "^8.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
