--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,5 +53,13 @@ services:
     volumes:
       - "database:/var/lib/mysql:rw"
 
+  push-api:
+    image: "fevermap/push-api:latest"
+    build: push-api
+    volumes:
+      - "./push-api:/app:rw"
+    ports:
+      - 9001:9001
+
 volumes:
   database: ~
