Add start script

--- a/push-api/package.json
+++ b/push-api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon push-service.js"
+    "serve": "nodemon push-service.js",
+    "start": "node push-service.js"
   },
   "author": "",
   "license": "ISC",
