--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "polymer-webpack-loader": "^2.0.3",
     "postcss-cli": "^6.1.3",
     "resolve-url-loader": "^3.1.1",
+    "tabtrap": "^1.2.6",
     "webpack-node-externals": "^1.7.2",
     "workbox-cacheable-response": "^5.0.0",
     "workbox-core": "^5.0.0",
