--- a/ocp/production/dc-prod-fevermap-api.yaml
+++ b/ocp/production/dc-prod-fevermap-api.yaml
@@ -54,13 +54,12 @@ spec:
           value: entrypoint.sh
         - name: APPDIR
           value: /opt/app-root/src
-        - name: UWSGIPLUGINLINE
         image: fevermap-staging/fevermap-api:release
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 3
           httpGet:
-            path: /api/v0/stats
+            path: /ping
             port: 9000
             scheme: HTTP
           initialDelaySeconds: 10
@@ -74,7 +73,7 @@ spec:
         readinessProbe:
           failureThreshold: 3
           httpGet:
-            path: /api/v0/stats
+            path: /ping
             port: 9000
             scheme: HTTP
           initialDelaySeconds: 5
@@ -86,11 +85,21 @@ spec:
             memory: 1Gi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /opt/app-root/src/entrypoint.sh
+          name: uwsgi-starter
+          readOnly: true
+          subPath: entrypoint.sh
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
+      volumes:
+      - configMap:
+          defaultMode: 360
+          name: fevermap-api-uwsgi-starter
+        name: uwsgi-starter
   test: false
   triggers:
   - imageChangeParams:
