--- a/ocp/production/dc-prod-fevermap-front.yaml
+++ b/ocp/production/dc-prod-fevermap-front.yaml
@@ -46,7 +46,7 @@ spec:
           failureThreshold: 3
           httpGet:
             path: /window-settings.js
-            port: 8080
+            port: 8081
             scheme: HTTP
           initialDelaySeconds: 10
           periodSeconds: 10
@@ -56,13 +56,13 @@ spec:
         ports:
         - containerPort: 8080
           protocol: TCP
-        - containerPort: 8443
+        - containerPort: 8081
           protocol: TCP
         readinessProbe:
           failureThreshold: 3
           httpGet:
             path: /window-settings.js
-            port: 8080
+            port: 8081
             scheme: HTTP
           initialDelaySeconds: 5
           periodSeconds: 10
@@ -78,6 +78,10 @@ spec:
           name: fevermap-window-settings
           readOnly: true
           subPath: window-settings.js
+        - mountPath: /opt/app-root/etc/nginx.d/liveness.conf
+          name: liveness-conf
+          readOnly: true
+          subPath: liveness.conf
         - mountPath: /opt/app-root/src/.well-known/acme-challenge/Nxm-iKVCGXj7fzEtykKs2-AhOyZ_L6WUWdPxyM9OYNE
           name: challenge-api
           readOnly: true
@@ -96,6 +100,10 @@ spec:
           defaultMode: 420
           name: fevermap-window-settings
         name: fevermap-window-settings
+      - configMap:
+          defaultMode: 420
+          name: fevermap-app-nginx-liveness
+        name: liveness-conf
       - configMap:
           defaultMode: 420
           name: challenge-api
