--- a/ocp/production/template-fevermap-runtime.yaml
+++ b/ocp/production/template-fevermap-runtime.yaml
@@ -40,12 +40,12 @@ parameters:
   value: fevermap
 - description: The front-end container image pull URL.
   displayName: Front Image URL
-  name: FRONT_IMG_URL
+  name: APP_IMG_URL
   required: true
   value: quay.io/fevermap/fevermap
 - description: Version of front image to be used (release-tag or latest).
   displayName: Front-end image Version
-  name: FRONT_VERSION
+  name: APP_VERSION
   required: false
   value: "latest"
 - description: The API container image pull URL.
@@ -60,7 +60,7 @@ parameters:
   value: "latest"
 - description: Maximum amount of memory the frontend container can use.
   displayName: Memory Limit Frontned
-  name: MEMORY_FRONT_LIMIT
+  name: MEMORY_APP_LIMIT
   required: true
   value: 512Mi
 - description: Maximum amount of memory the API container can use.
@@ -81,7 +81,7 @@ parameters:
 - description: The exposed hostname that will route to the Fevermap frontend service,
     if left blank a value will be defaulted.
   displayName: Application Frontend Hostname
-  name: APPLICATION_FRONT_DOMAIN
+  name: APPLICATION_APP_DOMAIN
 - description: The exposed hostname that will route to the Fevermap API service,
     if left blank a value will be defaulted.
   displayName: Application API Hostname
@@ -309,6 +309,55 @@ objects:
       name: latest
       referencePolicy:
         type: Source
+- apiVersion: v1
+  data:
+    entrypoint.sh: |
+      #!/bin/bash
+      set -e
+
+      # Turn on bash's job control so we can spawn subcommands
+      set -m
+
+      # https://flask.palletsprojects.com/en/1.1.x/cli/
+      export FLASK_APP="fevermap"
+
+      # Default to development if nothing is set
+      if [ -z "$FLASK_ENV" ]
+      then
+        export FLASK_ENV="development"
+      fi
+
+      export PYTHONPATH="${APPDIR}:${PYTHONPATH}"
+      export LC_ALL=C.UTF-8
+      export LANG=C.UTF-8
+
+      if [ "$FLASK_ENV" == "production" ]
+      then
+        # Start a secondary process to gracefully reload uswgi if any of it's files get
+        # modified. Needs Debian packages procps and entr installed on system.
+        echo "Starting entr to watch for source code changes..."
+        (find /app | entr -p -s "echo 'Entr: reloading...' && pkill --signal SIGHUP uwsgi" &)
+        # This is only indented for development use, don't run production with this entrypoint.
+      fi
+
+      uwsgi \
+          --module=fevermap.wsgi:application \
+          --master \
+          --processes=5 \
+          --threads=2 \
+          --set-placeholder="base=${APPDIR}" \
+          --chdir="%(base)" \
+          --http-socket="0.0.0.0:9000" \
+          --uid="$(id -un)" \
+          --gid="$(id -gn)" \
+          --vacuum \
+          --die-on-term \
+          --env="LC_ALL=C.UTF-8" \
+          --env="LANG=C.UTF-8" \
+          --disable-logging
+  kind: ConfigMap
+  metadata:
+    name: ${NAME}-api-uwsgi-starter
 - apiVersion: apps.openshift.io/v1
   kind: DeploymentConfig
   metadata:
@@ -368,6 +417,36 @@ objects:
                 memory: 1Gi
             terminationMessagePath: /dev/termination-log
             terminationMessagePolicy: File
+            readinessProbe:
+              httpGet:
+                path: /ping
+                port: 9000
+                scheme: HTTP
+              initialDelaySeconds: 5
+              timeoutSeconds: 2
+              periodSeconds: 10
+              successThreshold: 1
+              failureThreshold: 3
+            livenessProbe:
+              httpGet:
+                path: /ping
+                port: 9000
+                scheme: HTTP
+              initialDelaySeconds: 10
+              timeoutSeconds: 3
+              periodSeconds: 10
+              successThreshold: 1
+              failureThreshold: 3
+            volumeMounts:
+            - mountPath: /opt/app-root/src/entrypoint.sh
+              name: uwsgi-starter
+              readOnly: true
+              subPath: entrypoint.sh
+        volumes:
+        - configMap:
+            defaultMode: 0550
+            name: ${NAME}-api-uwsgi-starter
+          name: uwsgi-starter
         dnsPolicy: ClusterFirst
         restartPolicy: Always
         schedulerName: default-scheduler
@@ -436,7 +515,7 @@ objects:
     - annotations: null
       from:
         kind: DockerImage
-        name: ${FRONT_IMG_URL}:${FRONT_VERSION}
+        name: ${APP_IMG_URL}:${APP_VERSION}
       name: latest
       referencePolicy:
         type: Source
@@ -445,18 +524,52 @@ objects:
     window-settings.js: |+
       window.URLS = {
           API_URL: 'https://${APPLICATION_API_DOMAIN}',
-          APP_URL: 'https://${APPLICATION_FRONT_DOMAIN}',
+          APP_URL: 'https://${APPLICATION_APP_DOMAIN}',
       };
       window.GOOGLE_ANALYTICS_CODE='${GOOGLE_ANALYTICS_CODE}';
 
   kind: ConfigMap
   metadata:
     name: ${NAME}-window-settings
+- apiVersion: v1
+  data:
+    liveness.conf: |2
+
+      map $http_user_agent $log_ua {
+
+          ~kube-probe 0;
+          ~Pingdom 0;
+
+          default 1;
+      }
+
+      server {
+          listen       8081 default_server;
+          listen       [::]:8081 default_server;
+          server_name  _;
+          root         /opt/app-root/src;
+
+          access_log /var/log/nginx/access.log main if=$log_ua;
+
+          location / {
+          }
+
+          error_page 404 /404.html;
+          location = /40x.html {
+          }
+
+          error_page 500 502 503 504  /50x.html;
+          location = /50x.html {
+          }
+      }
+  kind: ConfigMap
+  metadata:
+    name: ${NAME}-app-nginx-liveness
 - apiVersion: apps.openshift.io/v1
   kind: DeploymentConfig
   metadata:
     labels:
-      app.kubernetes.io/component: front
+      app.kubernetes.io/component: app
       app.kubernetes.io/instance: ${NAME}-app
       app.kubernetes.io/name: nginx
       app.kubernetes.io/part-of: fevermap
@@ -489,8 +602,28 @@ objects:
           ports:
           - containerPort: 8080
             protocol: TCP
-          - containerPort: 8443
+          - containerPort: 8081
             protocol: TCP
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /window-settings.js
+              port: 8081
+              scheme: HTTP
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 2
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /window-settings.js
+              port: 8081
+              scheme: HTTP
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 2
           resources:
             limits:
               memory: 1Gi
@@ -501,6 +634,10 @@ objects:
             name: ${NAME}-window-settings
             readOnly: true
             subPath: window-settings.js
+          - mountPath: /opt/app-root/etc/nginx.d/liveness.conf
+            name: liveness-conf
+            readOnly: true
+            subPath: liveness.conf
         dnsPolicy: ClusterFirst
         restartPolicy: Always
         schedulerName: default-scheduler
@@ -510,6 +647,10 @@ objects:
             defaultMode: 420
             name: ${NAME}-window-settings
           name: ${NAME}-window-settings
+        - configMap:
+            defaultMode: 0444
+            name: ${NAME}-app-nginx-liveness
+          name: liveness-conf
     test: false
     triggers:
     - type: ConfigChange
@@ -531,10 +672,6 @@ objects:
       port: 8080
       protocol: TCP
       targetPort: 8080
-    - name: 8443-tcp
-      port: 8443
-      protocol: TCP
-      targetPort: 8443
     selector:
       deploymentconfig: ${NAME}-app
     sessionAffinity: None
@@ -544,7 +681,7 @@ objects:
   metadata:
     name: ${NAME}
   spec:
-    host: ${APPLICATION_FRONT_DOMAIN}
+    host: ${APPLICATION_APP_DOMAIN}
     port:
       targetPort: 8080-tcp
     tls:
