--- a/ocp/staging/dc-staging-fevermap-api.yaml
+++ b/ocp/staging/dc-staging-fevermap-api.yaml
@@ -52,20 +52,50 @@ spec:
         - name: UWSGIPLUGINLINE
         image: fevermap-staging/fevermap-api:latest
         imagePullPolicy: IfNotPresent
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /ping
+            port: 9000
+            scheme: HTTP
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 3
         name: fevermap-api
         ports:
         - containerPort: 8080
           protocol: TCP
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /ping
+            port: 9000
+            scheme: HTTP
+          initialDelaySeconds: 5
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 2
         resources:
           limits:
             memory: 1Gi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /opt/app-root/src/entrypoint.sh
+          name: uwsgi-starter
+          readOnly: true
+          subPath: entrypoint.sh
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
+      volumes:
+      - configMap:
+          defaultMode: 360
+          name: fevermap-api-uwsgi-starter
+        name: uwsgi-starter
   test: false
   triggers:
   - imageChangeParams:
