--- a/push-api/package.json
+++ b/push-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon push-service.js",
-    "start": "node push-service.js"
+    "start": "NODE_ENV=production node push-service.js"
   },
   "author": "",
   "license": "ISC",
