post the release tag with webhook

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,15 @@ staging:
 production:
   stage: deploy
   script:
-    - echo "Not implemented"
+    - |
+      cat > "$(pwd)/post.data" << EOF
+      env:
+      - name: "TAG"
+        value: "${CI_COMMIT_TAG}"
+      - name: "COMMIT_ID"
+        value: "${CI_COMMIT_SHORT_SHA}"
+      EOF
+    - curl -H "Content-Type:application/yaml" --data-binary @$(pwd)/post.data -X POST -k https://api.pro-eu-west-1.openshift.com/apis/build.openshift.io/v1/namespaces/fevermap-staging/buildconfigs/fevermap-release/webhooks/${OCP_WEBHOOK_TOKEN}/generic
   rules:
     # Only run deply on Fevermap master branch when a release is tagged
     - if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master" && $CI_COMMIT_TAG
