--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,4 @@
-# Website fevermap.net is updated on every master branch commit
-pages:
-  script:
-    - mkdir .public
-    - cp -r * .public
-    - mv .public public
-  artifacts:
-    paths:
-      - public
-  only:
-    - master
-
+---
 stages:
   - test
   - build
@@ -35,26 +24,34 @@ extra tests:
 
 build-app:
   stage: build
-  script:
-    - apt-get update -qq && apt-get install -qq --no-install-recommends nodejs npm webpack
+  image: node:latest
+  cache:
+    paths:
+      - app/.node_modules
+  before_script:
     - npm install -g npm@latest
     - cd app
     - npm install
+  script:
     - npm run lint
     - npm run build
     - find dist -ls
 
 staging:
   stage: deploy
+  rules:
+    # Only run deply on Fevermap master branch when a release is tagged
+    - if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master"
+    # Only run deploy if there are changes to the api or app
+    - changes:
+      - api/**
+      - app/**
   script:
     - 'which ssh-agent || ( apt-get update -qq && apt-get install -qq openssh-client )'
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$FEVERMAP_APP_USER_SSH_PRIVATE_KEY")
     # Deploy
     - ssh fevermap@dev.fevermap.net -p 33100 -o StrictHostKeyChecking=no "cd /var/www/fevermap && make update-master && make run"
-  rules:
-    # Only run deply on Fevermap master branch when a release is tagged
-    - if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master"
 
 # Production server does not yet exist, this is a placeholder only
 production:
@@ -74,3 +71,21 @@ production:
         value: "${CI_COMMIT_SHORT_SHA}"
       EOF
     - curl -H "Content-Type:application/yaml" --data-binary @$(pwd)/post.data -X POST -k https://api.pro-eu-west-1.openshift.com/apis/build.openshift.io/v1/namespaces/fevermap-staging/buildconfigs/fevermap-release/webhooks/${OCP_WEBHOOK_TOKEN}/generic
+
+
+# Website fevermap.net is updated on every master branch commit
+pages:
+  rules:
+    # Only run deply on Fevermap master branch when a release is tagged
+    - if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master"
+    # Only run deploy if there are changes to the website files
+    - changes:
+      - ./*.*
+      - images/*
+  script:
+    - mkdir .public
+    - cp -r * .public
+    - mv .public public
+  artifacts:
+    paths:
+      - public
