--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,11 @@ extra tests:
 
 build-app:
   stage: build
+  rules:
+    # Only run build if there are changes to the api or app
+    - changes:
+        - api/**
+        - app/**
   image: node:latest
   cache:
     paths:
@@ -40,12 +45,12 @@ build-app:
 staging:
   stage: deploy
   rules:
-    # Only run deply on Fevermap master branch when a release is tagged
-    - if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master"
-    # Only run deploy if there are changes to the api or app
+    # Only consider deploying if there are changes to the api or app
     - changes:
-      - api/**
-      - app/**
+        - api/**
+        - app/**
+      # Only deply on Fevermap master branch
+      if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master"
   script:
     - 'which ssh-agent || ( apt-get update -qq && apt-get install -qq openssh-client )'
     - eval $(ssh-agent -s)
@@ -76,12 +81,11 @@ production:
 # Website fevermap.net is updated on every master branch commit
 pages:
   rules:
-    # Only run deply on Fevermap master branch when a release is tagged
-    - if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master"
-    # Only run deploy if there are changes to the website files
     - changes:
-      - ./*.*
-      - images/*
+        - ./*.*
+        - images/*
+      # Only update Gitlab pages on Fevermap master branch commits
+      if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master"
   script:
     - mkdir .public
     - cp -r * .public
